SE-14: Fix email popup spacing issue

--- a/scss/civicrm/search/pages/_send-email.scss
+++ b/scss/civicrm/search/pages/_send-email.scss
@@ -16,13 +16,6 @@
     padding: 0 20px;
   }
 
-  .crm-accordion-wrapper,
-  .crm-block > .crm-submit-buttons,
-  .crm-block > .form-layout-compressed {
-    margin-left: -20px !important;
-    margin-right: -20px !important;
-  }
-
   .crm-block > .crm-submit-buttons
   .crm-block > .form-layout-compressed {
     td.label {
